eks-deploy-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: alb
    annotations:
      ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: eks.amazonaws.com/alb
